--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 			rel="stylesheet"
 		/>
 
-		<title>WebStylePress</title>
+		<title>Pizza Shop</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
